--- a/computer-database/src/main/resources/messages_en.properties
+++ b/computer-database/src/main/resources/messages_en.properties
@@ -13,5 +13,4 @@ form.searchbox = Search name
 form.addEdit = Add/Edit
 form.cancel = Cancel
 form.check.name = Please enter a computer name
-date.pattern = MM/dd/YYYY
-date.format = MM/dd/yyyy HH:mm:ss
+form.check.name = Please enter a correct date
