--- a/computer-database/src/main/resources/messages_fr.properties
+++ b/computer-database/src/main/resources/messages_fr.properties
@@ -13,5 +13,4 @@ form.searchbox = Chercher par nom
 form.addEdit = Ajouter/Modifier
 form.cancel = Annuler
 form.check.name = Insérer le nom de l'ordinateur
-date.pattern = dd/MM/YYYY
-date.format = dd/MM/yyyy HH:mm:ss
+form.check.date = Entrer un format de date correct
