--- a/computer-database/src/main/resources/messages_fr.properties
+++ b/computer-database/src/main/resources/messages_fr.properties
@@ -13,4 +13,4 @@ form.searchbox = Chercher par nom
 form.addEdit = Ajouter/Modifier
 form.cancel = Annuler
 form.check.name = Insérer le nom de l'ordinateur
-form.check.date = Entrer un format de date correct
+form.check.date = Insérer une date au format dd/mm/YYYY
