--- a/computer-database/src/main/resources/messages_en.properties
+++ b/computer-database/src/main/resources/messages_en.properties
@@ -13,4 +13,4 @@ form.searchbox = Search name
 form.addEdit = Add/Edit
 form.cancel = Cancel
 form.check.name = Please enter a computer name
-form.check.name = Please enter a correct date to the format mm/dd/YYYY
+form.check.date = Please enter a correct date to the format mm/dd/YYYY
