@Valid + Annotation in dto

--- a/computer-database/src/main/resources/messages_en.properties
+++ b/computer-database/src/main/resources/messages_en.properties
@@ -12,5 +12,7 @@ form.filter = Filter by name
 form.searchbox = Search name
 form.addEdit = Add/Edit
 form.cancel = Cancel
-form.check.name = Please enter a computer name
-form.check.date = Please enter a correct date to the format mm/dd/YYYY
+NotEmpty.Computer.name = Please enter a computer name
+DateTimeFormat.Computer.date = Please enter a correct  date to the format mm/dd/YYYY
+date.pattern = mm/dd/YYYY
+date.format = mm/dd/YYYY HH:mm:ss
