--- a/computer-database/src/main/resources/messages_fr.properties
+++ b/computer-database/src/main/resources/messages_fr.properties
@@ -12,5 +12,7 @@ form.filter = Trier par nom
 form.searchbox = Chercher par nom
 form.addEdit = Ajouter/Modifier
 form.cancel = Annuler
-form.check.name = Insérer le nom de l'ordinateur
-form.check.date = Insérer une date au format dd/mm/YYYY
+NotEmpty.Computer.name = Insérer le nom de l\''ordinateur
+DateTimeFormat.Computer.date = Insérer la date au format dd/mm/YYYY
+date.pattern = dd/mm/YYYY
+date.format = dd/MM/yyyy HH:mm:ss
