--- a/computer-database/webapp/src/main/resources/messages_en.properties
+++ b/computer-database/webapp/src/main/resources/messages_en.properties
@@ -15,3 +15,8 @@ form.cancel = Cancel
 NotEmpty.Computer.name = Please enter a computer name
 DateTimeFormat.Computer.date = Please enter a correct  date to the format mm/dd/YYYY
 or = or
+login.title = Login
+login.submit = Login
+login.username = Username
+login.password = Password
+login.error = Invalide username or password
