--- a/computer-database/webapp/src/main/resources/messages_fr.properties
+++ b/computer-database/webapp/src/main/resources/messages_fr.properties
@@ -15,3 +15,8 @@ form.cancel = Annuler
 NotEmpty.Computer.name = Insérer le nom de l\''ordinateur
 DateTimeFormat.Computer.date = Insérer la date au format dd/mm/YYYY
 or = ou
+login.title = Page de connexion
+login.submit = Se connecter
+login.username = Pseudo
+login.password = Mot de passe
+login.error = Pseudo ou mot de passe invalide
