pagination - orderBY - img flag

--- a/computer-database/webapp/src/main/resources/messages_fr.properties
+++ b/computer-database/webapp/src/main/resources/messages_fr.properties
@@ -13,7 +13,7 @@ form.searchbox = Chercher par nom
 form.addEdit = Ajouter/Modifier
 form.cancel = Annuler
 NotEmpty.Computer.name = Insérer le nom de l\''ordinateur
-DateTimeFormat.Computer.date = Insérer la date au format dd/mm/YYYY
+DateTimeFormat.Computer.date = Insérer la date au format jj/mm/AAAA
 or = ou
 login.title = Page de connexion
 login.submit = Se connecter
